force-app/main/default/objects/Management__c/Management__c.object-meta.xml
<CustomObject>
    <label>管理</label>
    <nameField>
        <label>管理名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>管理</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>