force-app/main/default/objects/Management__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>结束日期</label>
    <type>Date</type>
</CustomField>