force-app/main/default/objects/Management__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>负责人</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>管理</relationshipLabel>
    <relationshipName>Management_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>