force-app/main/default/objects/Management__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>开始日期</label>
    <type>Date</type>
</CustomField>