force-app/main/default/objects/Management__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状态</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>已取消</fullName>
            </value>
            <value>
                <fullName>已暂停</fullName>
            </value>
            <value>
                <fullName>已完成</fullName>
            </value>
            <value>
                <fullName>未开始</fullName>
            </value>
            <value>
                <fullName>进行中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>